# bedelia-rest/app/Http/Controllers/Controller.php
@@ -334,12 +334,12 @@ class Controller extends BaseController
      * @OA\Post(
      *     path="/foo",
      *     tags={"Foo"},
-     *     @OA\RequestBody(
-     *         @OA\JsonContent(
-     *             type="array",
-     *             @OA\Items(type="integer"),
-     *         ),
-     *     ),
+    *      @OA\RequestBody(
+    *          @OA\JsonContent(
+    *              @OA\Property(property="fecha_inicio", type="string"),
+    *              @OA\Property(property="fecha_fin",    type="string"),
+    *          ),
+    *      ),
      *     @OA\Response(
      *         response="200",
      *         description="",
@@ -349,3 +349,5 @@ class Controller extends BaseController
      */
 
 }
+
+
